--- a/Site Web/css/style.css
+++ b/Site Web/css/style.css
@@ -1,6 +1,6 @@
-:root{
-  --main-color: #8145c5;                   /* Violet Canva */
-  --secondary-color: rgb(17, 223, 230);    /* Bleu Canva */
+:root {
+  --main-color: #8145c5; /* Violet Canva */
+  --secondary-color: rgb(17, 223, 230); /* Bleu Canva */
   --third-color: #a063e6;
 
   /* colors
@@ -44,7 +44,7 @@ a:visited {
 
 /* Header */
 header {
-  background-color: var(--main-color); 
+  background-color: var(--main-color);
   color: #fff;
   padding: 20px 30px;
   display: flex;
@@ -72,7 +72,7 @@ header .header-div {
 
 header .search-bar {
   padding: 10px 20px;
-  border-radius: 25px;
+  border-radius: 12px;
   border: 1px solid #ddd;
   font-size: 16px;
   transition: all 0.3s ease;
@@ -100,7 +100,6 @@ header .btn-signup {
 header .btn-login:hover {
   border-radius: 25px;
   background-color: #b070e0;
-  
 }
 
 header .btn-signup:hover {
@@ -146,6 +145,7 @@ header .btn-signup:hover {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
   color: #333;
+  margin-bottom: 10px;
 }
 
 /* Templates et Projets */
@@ -159,6 +159,11 @@ header .btn-signup:hover {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
+  justify-content: space-around;
+}
+.template img,
+.projecs img {
+  border-radius: 12px;
 }
 
 .template,
@@ -166,36 +171,57 @@ header .btn-signup:hover {
   width: 22%;
   background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 8px 8px 8px 4px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  transition: transform 0.3s ease;
+  transition: 0.3s ease;
   text-align: center;
-  margin-bottom: 20px;
-  padding: 20px;
+  margin: 5px;
+  padding: 10px;
 }
 
 .template h3,
 .project h3 {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
   color: #6a5acd;
 }
 
 .template p,
 .project p {
-  padding: 15px;
-  font-size: 16px;
-  font-weight: 400;
+  padding: 5px;
+  font-size: 14px;
+  font-weight: 700;
   color: #333;
+}
+
+.templates-section h2 {
+  margin: 5px;
+  font-size: 22px;
+  font-weight: bold;
+  padding: 10px;
+  margin: 10px;
+}
+
+.templates-section p,
+.projects-section p {
+  margin: 15px;
+  margin-bottom: 25px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .template:hover,
 .project:hover {
-  transform: translateY(-5px);
+  background-color: #decdff;
+  transform: translateY(-15px);
 }
 
 .p-div {
-  background: linear-gradient(45deg, #ff9ebc, #6a5acd); /* Dégradé sur fond */
+  background: linear-gradient(
+    to right,
+    #00a3e0,
+    #005f7a
+  ); /* Dégradé sur fond */
   padding: 50px;
   border-radius: 8px;
   margin-bottom: 30px;
@@ -221,8 +247,6 @@ footer {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-
-
 /* Style général pour la barre de recherche */
 .search-bar {
   width: 500px; /* Augmentez la largeur de la barre de recherche */
@@ -279,4 +303,11 @@ footer {
 .nav .btn-login,
 .nav .btn-signup {
   margin-left: 10px;
+}
+
+.article {
+  text-align: justify;
+  font-size: xx-small; /* Taille de texte plus petite (13px) */
+  line-height: 1.2; /* Espacement entre les lignes de texte pour améliorer la lisibilité */
+  color: #333; /* Couleur du texte */
 }
